--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <section class="bg-sky-200 mx-auto w-9/12 mt-12 p-8">
         <h3 class="text-3xl mb-6 font-medium">Please login</h3>
         <div>
-            <input class="w-9/12 block mb-2 px-3 b rounded" type="email" name="" id="" placeholder="enter your email adress">
-        <input class="w-9/12 block mb-2 px-3 rounded" type="password" name="" id="" placeholder=" password">
-        <button class="bg-amber-700 hover:bg-sky-600 px-8 py-2 rounded-lg font-medium text-white">Submit</button>
+            <input id="input-email" class="w-9/12 block mb-2 px-3 b rounded" type="email" name="" id="" placeholder="enter your email adress">
+        <input id="input-password" class="w-9/12 block mb-2 px-3 rounded" type="password" name="" id="" placeholder=" password">
+        <button id="login-btn" class="bg-amber-700 hover:bg-sky-600 px-8 py-2 rounded-lg font-medium text-white">Submit</button>
         </div>
         
     </section>
    </main>
-    
+    <script src="js/login.js"></script>
 </body>
 </html>
