--- a/bank.html
+++ b/bank.html
@@ -20,11 +20,11 @@
                 </div>
                 <div class="bg-yellow-500 rounded p-8 text-white">
                     <h2 class="text-2xl">Withdraw</h2>
-                    <h4 class="text-5xl">$ <span id="withdraw-total">00</span> </h4>
+                    <h4 class="text-5xl">$<span id="withdraw-total">00</span> </h4>
                 </div>
                 <div class="bg-violet-500 rounded p-8 text-white">
                     <h2 class="text-2xl">Ballance</h2>
-                    <h4 class="text-5xl">$ <span id="balance-total">00</span> </h4>
+                    <h4 class="text-5xl">$<span id="balance-total">00</span> </h4>
                 </div>
                 
             </div>
@@ -50,5 +50,6 @@
        </main>
 
        <script src="js/deposite.js"></script>
+       <script src="js/withdraw.js"></script>
 </body>
 </html>
