--- a/bank.html
+++ b/bank.html
@@ -48,7 +48,7 @@
          </section>
         
        </main>
-
+       <script src="js/utilities.js"></script>
        <script src="js/deposite.js"></script>
        <script src="js/withdraw.js"></script>
 </body>
